dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=aglehcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=aglehcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=aglehcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=aglehcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=aglehcoin-wallet.1
endif
endif
